:bug: fix firefox archive right align

--- a/source/css/_components/post/post-collapse.styl
+++ b/source/css/_components/post/post-collapse.styl
@@ -62,10 +62,8 @@
 
   .post-header {
     position: relative;
-    text-align: left;
     border-bottom: 2px solid rgba($colors.primary, 0.3);
     display: flex;
-    justify-content: end;
 
     &::before {
       content: '';
